The SampleMiniClusterTest now works, but only with testOnly due to a Spark bug (JIRA filed)